--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           fi
 
       - name: Build and push Docker image
-        if: ${{ steps.compare.outputs.changed == 'true' && secrets.GHCR_PAT != '' }}
+        if: steps.compare.outputs.changed == 'true' && secrets.GHCR_PAT != ''
         uses: docker/build-push-action@v5
         with:
           context: .
